<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cristobal.mrfox.MyLogin">

    <ImageView

        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/scott_webb_110034_unsplash" />

    <TextView
        android:id="@+id/idCredentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:padding="16dp"
        android:text="@string/enterCredentials"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/idUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idCredentials"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/idPasswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/idUserName"
        android:layout_alignStart="@+id/idUserName"
        android:layout_below="@+id/idUserName"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/idBTN"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/idPasswd"
        android:layout_alignLeft="@+id/idPasswd"
        android:layout_alignRight="@+id/idPasswd"
        android:layout_alignStart="@+id/idPasswd"
        android:layout_below="@+id/idPasswd"
        android:background="@android:color/holo_blue_dark"
        android:onClick="MainActivity"
        android:text="@string/txtBTN" />
</RelativeLayout>
