<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cristobal.mrfox.MainActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/forest" />

    <LinearLayout
        android:id="@+id/linearV"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/imageView2"
        android:orientation="horizontal"
        android:padding="10dp">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/fox" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/textoMrFox"
            android:textSize="35dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/linearV"
        android:orientation="horizontal"
        android:padding="5dp"
        tools:layout_width="match_parent">


        <Button
            android:id="@+id/button1"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:text="@string/txtBTNuninstall"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#5d74e9"
            android:text="@string/txtBTNupdate"
            android:textColor="@android:color/background_light"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:padding="10dp"
        android:text="@string/textoLorem" />
</RelativeLayout>
